--- a/index.html
+++ b/index.html
@@ -354,6 +354,37 @@
 
                           <li><a href="employee_chats.html" class="text-gray-400 hover:text-white">الرسائل </a></li>
                             </ul>
+
+
+
+
+
+
+
+
+
+
+
+ <li><a href="no_code" class="text-gray-400 hover:text-white"> كود لا علاقة له بالموقع</a></li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                 </div>
                 <div>
                     <h3 class="text-lg font-bold mb-4">تواصل معنا</h3>
