--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
 
 
- <li><a href="no_code" class="text-gray-400 hover:text-white"> كود لا علاقة له بالموقع</a></li>
+ <li><a href="no_code.html" class="text-gray-400 hover:text-white"> كود لا علاقة له بالموقع،للتجرب</a></li>
 
 
 
