--- a/job_application_page.html
+++ b/job_application_page.html
@@ -109,14 +109,15 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
     import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-    // **هام:** استبدل هذه الإعدادات بمعلومات مشروعك من Firebase Console
+    // **هذه هي إعدادات Firebase الحقيقية الخاصة بك**
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID",
+      apiKey: "AIzaSyBsIaCjE7QOQ6QkhqhCIMA3sLdMvxBxPHk",
+      authDomain: "shaglni-c64c0.firebaseapp.com",
+      projectId: "shaglni-c64c0",
+      storageBucket: "shaglni-c64c0.firebasestorage.app",
+      messagingSenderId: "768887356636",
+      appId: "1:768887356636:web:11ec1d6991add3309c8819",
+      measurementId: "G-98GQGZS09W"
     };
 
     const app = initializeApp(firebaseConfig);
