--- a/job_application_page.html
+++ b/job_application_page.html
@@ -1,1 +1,199 @@
-ة
+<!DOCTYPE html>   
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تسجيل موظف جديد</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap');
+        body {
+            font-family: 'Tajawal', sans-serif;
+            background-color: #f5f7fa;
+        }
+        .container {
+            max-width: 800px;
+            margin: 2rem auto;
+            background-color: white;
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+        }
+        .form-group {
+            margin-bottom: 1.5rem;
+        }
+        label {
+            display: block;
+            font-weight: 500;
+            color: #4b5563;
+            margin-bottom: 0.5rem;
+        }
+        input, select, textarea {
+            width: 100%;
+            padding: 0.75rem;
+            border: 1px solid #d1d5db;
+            border-radius: 8px;
+            font-size: 1rem;
+            color: #374151;
+            transition: border-color 0.2s;
+        }
+        input:focus, select:focus, textarea:focus {
+            outline: none;
+            border-color: #2563eb;
+            box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.2);
+        }
+        .submit-btn {
+            background-color: #2563eb;
+            color: white;
+            padding: 1rem;
+            border: none;
+            border-radius: 8px;
+            font-size: 1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+        .submit-btn:hover {
+            background-color: #1e40af;
+        }
+        .message {
+            text-align: center;
+            padding: 1rem;
+            border-radius: 8px;
+            margin-top: 1rem;
+        }
+        .success-message {
+            background-color: #dcfce7;
+            color: #065f46;
+        }
+        .error-message {
+            background-color: #fee2e2;
+            color: #991b1b;
+        }
+    </style>
+    <script type="module" src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+</head>
+<body>
+
+<div class="container">
+    <h1 class="text-2xl font-bold text-center mb-6">تسجيل موظف جديد</h1>
+    <form id="employee-form" class="space-y-4">
+        <div class="form-group">
+            <label for="fullName">الاسم الكامل:</label>
+            <input type="text" id="fullName" name="fullName" required>
+        </div>
+        <div class="form-group">
+            <label for="jobTitle">المسمى الوظيفي:</label>
+            <input type="text" id="jobTitle" name="jobTitle" required>
+        </div>
+        <div class="form-group">
+            <label for="jobLocation">المدينة:</label>
+            <input type="text" id="jobLocation" name="jobLocation" required>
+        </div>
+        <div class="form-group">
+            <label for="photo">صورة شخصية:</label>
+            <input type="file" id="photo" name="photo" accept="image/*" required>
+        </div>
+        <div class="form-group">
+            <label for="previousWorks">أعمال سابقة (صور):</label>
+            <input type="file" id="previousWorks" name="previousWorks" accept="image/*" multiple>
+        </div>
+        <button type="submit" class="submit-btn w-full">إرسال</button>
+    </form>
+    <div id="message" class="message hidden"></div>
+</div>
+
+<script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+    import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyBsIaCjE7QOQ6QkhqhCIMA3sLdMvxBxPHk",
+      authDomain: "shaglni-c64c0.firebaseapp.com",
+      projectId: "shaglni-c64c0",
+      storageBucket: "shaglni-c64c0.appspot.com",
+      messagingSenderId: "768887356636",
+      appId: "1:768887356636:web:11ec1d6991add3309c8819",
+      measurementId: "G-98GQGZS09W"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    const CLOUDINARY_CLOUD_NAME = "dbmjg23hi";
+    const CLOUDINARY_UPLOAD_PRESET = "employee_preset";
+
+    const form = document.getElementById('employee-form');
+    const messageDiv = document.getElementById('message');
+
+    form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const fullName = document.getElementById('fullName').value;
+        const jobTitle = document.getElementById('jobTitle').value;
+        const jobLocation = document.getElementById('jobLocation').value;
+        const photoFile = document.getElementById('photo').files[0];
+        const previousWorksFiles = document.getElementById('previousWorks').files;
+
+        if (!photoFile) {
+            showMessage('يرجى اختيار صورة شخصية.', 'error');
+            return;
+        }
+
+        try {
+            const profileImageUrl = await uploadToCloudinary(photoFile);
+
+            const previousWorksUrls = await Promise.all(
+                Array.from(previousWorksFiles).map(file => uploadToCloudinary(file))
+            );
+
+            await addDoc(collection(db, "employees"), {
+                fullName,
+                jobTitle,
+                jobLocation,
+                profileImageUrl,
+                previousWorksUrls,
+                timestamp: serverTimestamp(),
+            });
+
+            showMessage('تم تسجيل الموظف بنجاح!', 'success');
+            form.reset();
+
+        } catch (error) {
+            console.error("خطأ في عملية التسجيل:", error);
+            showMessage(`حدث خطأ: ${error.message}`, 'error');
+        }
+    });
+
+    async function uploadToCloudinary(file) {
+        const formData = new FormData();
+        formData.append('file', file);
+        formData.append('upload_preset', CLOUDINARY_UPLOAD_PRESET);
+
+        const response = await fetch(`https://api.cloudinary.com/v1_1/${CLOUDINARY_CLOUD_NAME}/upload`, {
+            method: 'POST',
+            body: formData,
+        });
+
+        if (!response.ok) {
+            const errorData = await response.json();
+            throw new Error(errorData.error.message || "خطأ في رفع الملف إلى Cloudinary");
+        }
+
+        const data = await response.json();
+        return data.secure_url;
+    }
+
+    function showMessage(msg, type) {
+        messageDiv.textContent = msg;
+        messageDiv.className = `message ${type}-message`;
+        messageDiv.classList.remove('hidden');
+        setTimeout(() => {
+            messageDiv.classList.add('hidden');
+        }, 5000);
+    }
+</script>
+</body>
+</html>
