--- a/employee_listing_page.html
+++ b/employee_listing_page.html
@@ -56,12 +56,11 @@
         .previous-works-gallery {
             display: flex;
             gap: 8px;
-            overflow-x: auto; /* يجعل الشريط قابلاً للتمرير الأفقي */
-            white-space: nowrap; /* يمنع التفاف الصور */
-            padding-bottom: 10px; /* مسافة لشريط التمرير */
-            -webkit-overflow-scrolling: touch; /* لتحسين التمرير على الأجهزة التي تعمل باللمس */
+            overflow-x: auto;
+            white-space: nowrap;
+            padding-bottom: 10px;
+            -webkit-overflow-scrolling: touch;
         }
-        /* لتخصيص شكل شريط التمرير */
         .previous-works-gallery::-webkit-scrollbar {
             height: 8px;
         }
@@ -79,14 +78,13 @@
             object-fit: cover;
             border-radius: 8px;
             border: 1px solid #e5e7eb;
-            cursor: pointer; /* لإظهار إشارة اليد عند المرور عليها */
+            cursor: pointer;
             transition: transform 0.2s ease-in-out;
         }
         .previous-works-gallery img:hover {
             transform: scale(1.05);
         }
 
-        /* نافذة العرض الكبيرة (Modal) */
         .modal {
             display: none;
             position: fixed;
@@ -95,7 +93,7 @@
             top: 0;
             width: 100%;
             height: 100%;
-            overflow: hidden; /* لمنع التمرير للصفحة الخلفية */
+            overflow: hidden;
             background-color: rgba(0, 0, 0, 0.9);
             padding-top: 60px;
         }
@@ -106,10 +104,10 @@
             max-width: 800px;
             animation-name: zoom;
             animation-duration: 0.6s;
-            touch-action: pan-y; /* للسماح بالتمرير العمودي إذا كانت الصورة أكبر من الشاشة */
+            touch-action: pan-y;
         }
         @keyframes zoom {
-            from {transform:scale(0)} 
+            from {transform:scale(0)}
             to {transform:scale(1)}
         }
         .close {
@@ -127,7 +125,6 @@
             color: #bbb;
         }
 
-        /* أزرار التنقل - يمكن إخفاؤها إذا كان التمرير بالإصبع هو الأساس */
         .prev, .next {
             cursor: pointer;
             position: absolute;
@@ -142,7 +139,7 @@
             border-radius: 0 3px 3px 0;
             user-select: none;
             -webkit-user-select: none;
-            z-index: 1001; /* لضمان ظهورها فوق الصورة */
+            z-index: 1001;
         }
         .next {
             right: 0;
@@ -160,9 +157,8 @@
             .modal-content {
                 width: 100%;
             }
-            /* إخفاء الأسهم على الشاشات الصغيرة إذا كنا نعتمد على التمرير بالإصبع */
             .prev, .next {
-                display: none; 
+                display: none;
             }
         }
     </style>
@@ -384,7 +380,7 @@
                                     <span>${getTimeElapsed(employee.timestamp)}</span>
                                 </div>
                                 <div class="flex space-x-3 rtl:space-x-reverse">
-                                    <a href="chat.html?employeeId=${employee.id}"
+                                    <a href="chat.html?employeeId=${employee.id}&employeeName=${encodeURIComponent(employee.name)}"
                                         class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 text-sm">
                                         <i class="fas fa-envelope ml-1"></i> تواصل
                                     </a>
@@ -470,60 +466,50 @@
             }
         };
 
-        // متغيرات لتخزين حالة معرض الصور
         let currentGallery = [];
         let slideIndex = 0;
-        let isModalOpen = false; // لتتبع حالة النافذة المنبثقة
+        let isModalOpen = false;
 
-        // دالة لفتح النافذة المنبثقة
         function openModal(employeeId, index) {
             const employee = allEmployees.find(emp => emp.id === employeeId);
             if (!employee || !employee.previousWorksUrls) return;
-            
+
             currentGallery = employee.previousWorksUrls;
             slideIndex = index;
-            
+
             imageModal.style.display = "block";
-            isModalOpen = true; // تعيين حالة النافذة المنبثقة إلى مفتوحة
-            document.body.style.overflow = 'hidden'; // منع التمرير للصفحة الخلفية
+            isModalOpen = true;
+            document.body.style.overflow = 'hidden';
             showSlide(slideIndex);
 
-            // إضافة حالة جديدة إلى سجل المتصفح
             history.pushState({ modalOpen: true }, '');
         }
 
-        // دالة لعرض الصورة
         function showSlide(n) {
             if (n >= currentGallery.length) {slideIndex = 0}
             if (n < 0) {slideIndex = currentGallery.length - 1}
             modalImage.src = currentGallery[slideIndex];
         }
 
-        // دالة للتنقل بين الصور
         function plusSlides(n) {
             showSlide(slideIndex += n);
         }
 
-        // دالة لإغلاق النافذة المنبثقة
         function closeModal() {
             imageModal.style.display = "none";
-            isModalOpen = false; // تعيين حالة النافذة المنبثقة إلى مغلقة
-            document.body.style.overflow = ''; // استعادة التمرير للصفحة الخلفية
+            isModalOpen = false;
+            document.body.style.overflow = '';
 
-            // إذا تم إغلاقها يدوياً بزر X أو بالنقرة، والتاريخ يحتوي على حالة Modal، قم بالرجوع خطوة واحدة
             if (history.state && history.state.modalOpen) {
                 history.back();
             }
         }
 
-        // الاستماع لحدث زر الرجوع في المتصفح/الهاتف
         window.addEventListener('popstate', (event) => {
             if (isModalOpen) {
-                // إذا كانت النافذة المنبثقة مفتوحة وزر الرجوع تم الضغط عليه، أغلق النافذة
                 closeModal();
             }
         });
-
 
         document.addEventListener('DOMContentLoaded', fetchEmployees);
         searchInput.addEventListener('input', filterAndRenderEmployees);
@@ -545,20 +531,18 @@
         });
         cityFilter.addEventListener('change', filterAndRenderEmployees);
 
-        // إتاحة الدوال على نطاق النافذة لكي يمكن استدعاؤها من HTML
         window.openModal = openModal;
         window.closeModal = closeModal;
         window.plusSlides = plusSlides;
 
-        // --- دعم التمرير بالإصبع (Swipe) ---
         let touchstartX = 0;
         let touchendX = 0;
 
         function handleGesture() {
-            if (touchendX < touchstartX - 50) { // Swipe left
+            if (touchendX < touchstartX - 50) {
                 plusSlides(1);
             }
-            if (touchendX > touchstartX + 50) { // Swipe right
+            if (touchendX > touchstartX + 50) {
                 plusSlides(-1);
             }
         }
@@ -571,7 +555,6 @@
             touchendX = e.changedTouches[0].screenX;
             handleGesture();
         });
-        // --- نهاية دعم التمرير بالإصبع ---
     </script>
 </body>
 </html>
