--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
                         <a href="employee_listing_page.html" class="px-4 py-2 text-gray-600 font-medium rounded-lg hover:bg-blue-50 whitespace-nowrap transition-colors duration-200">الموظفون المتاحون</a>
                         <a href="jop_posting_page.html" class="px-4 py-2 text-gray-600 font-medium rounded-lg hover:bg-blue-50 whitespace-nowrap transition-colors duration-200">أضف وظيفة</a>
                         <a href="registration.html" class="px-4 py-2 text-gray-600 font-medium rounded-lg hover:bg-blue-50 whitespace-nowrap transition-colors duration-200">تسجيل موظف</a>
-                        <a href="about.us.html" class="px-4 py-2 text-gray-600 font-medium rounded-lg hover:bg-blue-50 whitespace-nowrap transition-colors duration-200">من نحن</a>
+              
+<a href="#" class="px-4 py-2 text-gray-600 font-medium rounded-lg hover:bg-blue-50 whitespace-nowrap transition-colors duration-200"> رسائلي</a>
+              
+
+
+
+
+
+
+
+          <a href="about.us.html" class="px-4 py-2 text-gray-600 font-medium rounded-lg hover:bg-blue-50 whitespace-nowrap transition-colors duration-200">من نحن</a>
                     </div>
                 </div>
 
